<resources>
    <string name="app_name">Marco Counter</string>

    <!--Carb/protein/fat Labels + editText + textView-->
    <string name="carb_label">Carbs:</string>
    <string name="protein_label">Protein:</string>
    <string name="fat_label">Fat:</string>

    <string name="carb_text_view">0.0</string>
    <string name="protein_text_view">0.0</string>
    <string name="fat_text_view">0.0</string>

    <string name="carb_edit_text">Enter Carbs</string>
    <string name="protein_edit_text">Enter protein</string>
    <string name="fat_edit_text">Enter fat</string>

    <!--Buttons-->


    <string name="clear_all">Clear All</string>
    <string name="enter_macros">Enter</string>
    <string name="new_activity">New activity</string>
    <string name="food_list_button">➨</string>

    <!--Keys for SharedPreferences-->

    <string name="preference_name">com.example.jeremy.simplemarcocounter.name</string>
    <string name="carb_preference_key">com.example.jeremy.simplemarcocounter.carbPreferneceKey</string>
    <string name="protein_preference_key">com.example.jeremy.simplemarcocounter.proteinPreferneceKey</string>
    <string name="fat_preference_key">com.example.jeremy.simplemarcocounter.fatPreferneceKey</string>
    <!--A2-->
    <string name="preference_name_A2">com.example.jeremy.simplemarcocounter.nameA2</string>
    <string name="food_list_key">com.example.jeremy.simplemarcocounter.foodListPreferneceKey</string>


    <!--Activity Food List Strings-->
    <string name="add_food_title_text_view">Food List</string>
    <string name="name_tag_text_view">Name:</string>
    <string name="hint_name_edit_text">Food Name</string>
    <string name="hint_carb_edit_text">Enter Carbs</string>
    <string name="hint_protein_edit_text">Enter Protein</string>
    <string name="hint_fat_edit_text">Enter Fat</string>
    <string name="submit_button">Sumbit</string>
    <string name="clear_button">Clear</string>
</resources>
