<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jeremy.simplemarcocounter.foodListActivity">

    <TextView
        android:text="@string/add_food_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/textView" />

    <TextView
        android:text="@string/name_tag_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/FoodNameEditText"
        android:hint="@string/hint_name_edit_text" />

    <EditText
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:id="@+id/carbEditTextA2"
        android:hint="@string/hint_carb_edit_text"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:id="@+id/proteinEditTextA2"
        android:hint="@string/hint_protein_edit_text"
        android:inputType="numberDecimal" />

    <EditText
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:id="@+id/fatEditTextA2"
        android:hint="@string/hint_fat_edit_text"
        android:inputType="numberDecimal" />


    <Button
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sumbitFoodA2"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:onClick="onSubmit"
        style="@style/Widget.AppCompat.Button.Colored" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/foodListListView" />

</LinearLayout>
